--- a/project1-Myportfolio/Code/Portfolio.css
+++ b/project1-Myportfolio/Code/Portfolio.css
@@ -22,15 +22,13 @@ header div{ font-family: 'Pontano Sans';}
 
 
 /* Style the navigation nav */
-nav {
-  /* support google chrom browser*/
-  -webkit-flex: 1;
-  /* ms flex to support internent exploer browser*/
-  -ms-flex: 1;
-  /* flex shorhand felx grow,shrink, basic mean 110*/
-  flex: 1;
+nav {display: flex;
   
+  
+ 
+  /* flex shorhand felx grow,shrink, basic mean 110*/
 
+  flex: 1;
   background :plum;
  margin:1px; ;
   padding: 8px 15px 15px 10px;
@@ -64,7 +62,8 @@ a{text-decoration: none;/*float:right*/;padding:15px; }
                     font-family: 'Amaranth';
                     font-size: 25px;
                   }
-
+                  
+                  
                
 
 /* style for about page*/
