--- a/project1-Myportfolio/Code/Portfolio.css
+++ b/project1-Myportfolio/Code/Portfolio.css
@@ -20,7 +20,7 @@ header {height:75px;
 }
 header div{ font-family: 'Pontano Sans';}
 
-section{display: flex;
+section{display :flex;
 }
 /* Style the navigation nav */
 nav {
@@ -33,11 +33,12 @@ nav {
   background :plum;
  margin:1px; ;
   padding: 8px 15px 15px 10px;
+   
  
 }
 
 /* Style the list inside the menu */
-nav ul {
+nav ul {/*flex-direction: row-reverse;display: flex;*/
   list-style-type: none;
   padding: 0px;
 }
